# junyi-online-learning-prediction

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  HOW-TO.md  Makefile  README.md  TO-DO.md  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: ci-cd.yml
data/: create_db.py  download_data.py  download_kaggle.py  preprocess.py  upload_to_gcs.py
docker/batch_infer/: Dockerfile
docker/train/: requirements.txt
docs/: application-flow.md  current-system-design.md  infrastructure-design.md  kubernetes-deployment-checklist.md  local-docker-k8s-testing.md  quality-and-delivery.md
docs/adrs/: 0001-mvp-kubernetes-jobs-before-full-flyte.md
flyte/: constants.py  full_pipeline_lp.py  full_pipeline_wf.py
flyte/tasks/: engineer_feature.py  ingest.py  preprocess.py  train_model.py
flyte/workflows/: engineer_feature.py  preprocess.py  train_model.py  train_pipeline.py
infra/terraform/: backend.tf  main.tf  outputs.tf  variables.tf
junyi_predictor/: __init__.py  paths.py
junyi_predictor/bootstrap/: __init__.py  database.py  kaggle.py
junyi_predictor/pipeline/: __init__.py  feature_engineering.py  preprocessing.py  training.py
junyi_predictor/storage/: __init__.py  gcs.py
notebooks/: eda.ipynb  model_training.ipynb
orchestration/: __init__.py  constants.py  flyte_app.py
scripts/: aws_utils.py  engineer_feature.py  feature_engineering.py  gcp_utils.py  gcs_utils.py  model.py  preprocess.py  train_model.py
terraform/.terraform/: terraform.tfstate
tests/: conftest.py  test_gcs_utils.py
tests/acceptance/: test_pipeline_stages.py
(+24 files in other folders)
