# Define project's core dependencies and build backend.

[tool.poetry]
name = "junyi-predictor"
version = "0.1.0"
description = "Junyi acadamy platform performance prediction"
authors = ["linhsinp <linhsinp@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.25.1"
pre-commit = "^4.2.0"
isort = "^6.0.1"
ruff = "^0.11.2"
flask = "^3.1.1"

[build-system]
requires = ["poetry-core=1.8.3"]
build-backend = "poetry.core.masonry.api"
