# Define project's core dependencies and build backend.

[project]
name = "junyi-predictor"
version = "0.1.0"
description = "Junyi acadamy platform performance prediction"
authors = [
    {name = "Lin, Hsin-Pei", email = "linhsinp@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "dotenv>=0.9.9",
  "fastparquet>=2024.11.0",
  "flask>=3.1.1",
  "flytekit>=1.16.0",
  "isort>=6.0.1",
  "kaggle>=1.7.4.5",
  "numpy>=2.2.6",
  "pandas>=2.3.0",
  "pre-commit>=4.2.0",
  "pyarrow>=20.0.0",
  "ruff>=0.11.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff >=0.7.4, <1.0.0",
]
prod = [
    "gunicorn >=23.0.0, <24.0.0",
]

[tool.uv]
default-groups = []
